misc(core, bullet): small cleanup